--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <div id="dog-image-container">
       <!-- images here -->
+      <h2>Dog Breeds</h2>
+      
     </div>
 
     <hr>
@@ -24,6 +26,7 @@
     <ul id="dog-breeds">
 
     </ul>
+    <script src="index.js"></script>
 
   </body>
 </html>
